src/templates/items-list/items-style/fly/style.scss
@import "./variables";

/**
 * Fly items style
 */
.vp-portfolio__items-style-fly {
  .vp-portfolio__item {

    // fix for safari border-radius.
    // https://github.com/nk-crew/visual-portfolio/issues/150
    z-index: 0;
    border-radius: var(--vp-items-style-fly--image__border-radius);
  }

  .vp-portfolio__item a {
    text-decoration: var(--vp-items-style-fly--links__text-decoration);
    outline: none;
    box-shadow: none;
  }

  // display overlay on item focus.
  .vp-portfolio__item-focus .vp-portfolio__item-overlay {
    transition: transform 0.2s ease-in-out 0 !important;
    transform: translateX(0%) translateY(0%) translateZ(0) !important;
  }

  .vp-portfolio__item-overlay {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    overflow: hidden;
    color: var(--vp-items-style-fly--overlay__color);
    text-align: center;
    text-decoration: var(--vp-items-style-fly--overlay__text-decoration);
    background-color: var(--vp-items-style-fly--overlay__background-color);
    transform: translateY(-100%) translateX(-100%);
  }

  // fix some themes figcaption styles.
  figcaption.vp-portfolio__item-overlay {
    margin: 0;
    font-style: inherit;
    color: var(--vp-items-style-fly--overlay__color);
  }

  // meta
  .vp-portfolio__item-meta-wrap {
    width: 100%;
    height: 100%;
    overflow: auto;

    .simplebar-content {
      display: flex;
      min-height: 100%;
    }
  }

  .vp-portfolio__item-meta {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    min-height: 100%;
    padding: var(--vp-items-style-fly--meta__padding-v) var(--vp-items-style-fly--meta__padding-h);
    color: inherit;

    > * {
      max-width: 100%;
      margin-bottom: var(--vp-items-style-fly--meta-items__gap);
    }

    > :last-child {
      margin-bottom: 0;
    }
  }

  .vp-portfolio__item-meta-icon {
    font-size: var(--vp-items-style-fly--meta-icon__font-size);
  }

  .vp-portfolio__item-meta-categories {
    display: inline-flex;
    flex-wrap: wrap;
    margin-left: calc(-1 * var(--vp-items-style-fly--meta-categories__gap));
    font-size: var(--vp-items-style-fly--meta-categories__font-size);
    font-weight: var(--vp-items-style-fly--meta-categories__font-weight);
    text-transform: var(--vp-items-style-fly--meta-categories__text-transform);

    .vp-portfolio__item-meta-category {
      display: flex;
      margin-left: var(--vp-items-style-fly--meta-categories__gap);
      opacity: var(--vp-items-style-fly--meta-categories__opacity);

      @if variable-exists(rtl) and $rtl {
        &::before {
          content: var(--vp-items-style-fly--meta-categories__separator);
        }

        &:first-of-type::before {
          content: none;
        }
      } @else {
        &::after {
          content: var(--vp-items-style-fly--meta-categories__separator);
        }

        &:last-of-type::after {
          content: none;
        }
      }

      a {
        text-decoration: var(--vp-items-style-fly--meta-categories__text-decoration);
      }
    }
  }

  .vp-portfolio__item-meta-title {
    margin-right: 0;
    margin-left: 0;
    font-size: var(--vp-items-style-fly--meta-title__font-size);
    color: inherit;
  }

  .vp-portfolio__item-meta-inline {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    margin-left: calc(-1 * var(--vp-items-style-fly--meta-inline__gap));
    font-weight: var(--vp-items-style-fly--meta-inline__font-weight);
    line-height: var(--vp-items-style-fly--meta-inline__line-height);

    > * {
      margin-left: var(--vp-items-style-fly--meta-inline__gap);
      opacity: var(--vp-items-style-fly--meta-inline__font-opacity);
    }
  }

  .vp-portfolio__item-meta-part-icon {
    margin-right: var(--vp-items-style-fly--meta-part-icon__offset);
  }

  .vp-portfolio__item-meta-author {
    display: flex;
    align-items: center;

    img {
      width: 1em;
      height: auto;
      border-radius: 1em;
    }
  }

  .vp-portfolio__item-meta-excerpt {
    line-height: var(--vp-items-style-fly--meta-excerpt__line-height);

    > * {
      opacity: var(--vp-items-style-fly--meta-excerpt__opacity);
    }
  }

  // align
  .vp-portfolio__item-align-center .vp-portfolio__item-meta {
    align-items: center;
    text-align: center;

    .vp-portfolio__item-meta-categories,
    .vp-portfolio__item-meta-inline {
      justify-content: center;
    }
  }

  .vp-portfolio__item-align-left .vp-portfolio__item-meta {
    align-items: flex-start;
    text-align: left;

    .vp-portfolio__item-meta-categories,
    .vp-portfolio__item-meta-inline {
      justify-content: flex-start;
    }
  }

  .vp-portfolio__item-align-right .vp-portfolio__item-meta {
    align-items: flex-end;
    text-align: right;

    .vp-portfolio__item-meta-categories,
    .vp-portfolio__item-meta-inline {
      justify-content: flex-end;
    }
  }

  .vp-portfolio__item-align-top-center .vp-portfolio__item-meta {
    align-items: center;
    justify-content: flex-start;
    text-align: center;

    .vp-portfolio__item-meta-categories,
    .vp-portfolio__item-meta-inline {
      justify-content: center;
    }
  }

  .vp-portfolio__item-align-top-left .vp-portfolio__item-meta {
    align-items: flex-start;
    justify-content: flex-start;
    text-align: left;

    .vp-portfolio__item-meta-categories,
    .vp-portfolio__item-meta-inline {
      justify-content: flex-start;
    }
  }

  .vp-portfolio__item-align-top-right .vp-portfolio__item-meta {
    align-items: flex-end;
    justify-content: flex-start;
    text-align: right;

    .vp-portfolio__item-meta-categories,
    .vp-portfolio__item-meta-inline {
      justify-content: flex-end;
    }
  }

  .vp-portfolio__item-align-bottom-center .vp-portfolio__item-meta {
    align-items: center;
    justify-content: flex-end;
    text-align: center;

    .vp-portfolio__item-meta-categories,
    .vp-portfolio__item-meta-inline {
      justify-content: center;
    }
  }

  .vp-portfolio__item-align-bottom-left .vp-portfolio__item-meta {
    align-items: flex-start;
    justify-content: flex-end;
    text-align: left;

    .vp-portfolio__item-meta-categories,
    .vp-portfolio__item-meta-inline {
      justify-content: flex-start;
    }
  }

  .vp-portfolio__item-align-bottom-right .vp-portfolio__item-meta {
    align-items: flex-end;
    justify-content: flex-end;
    text-align: right;

    .vp-portfolio__item-meta-categories,
    .vp-portfolio__item-meta-inline {
      justify-content: flex-end;
    }
  }
}

